fix video alignemnts, realign play button

--- a/style.css
+++ b/style.css
@@ -7,9 +7,7 @@
 }
 
 body {
-  /*   background-image: url(resources/background2.jpg);
- */
-  background-color: black;
+  background-image: url(resources/background2.jpg);
   background-size: contain;
   padding: 20px;
   background-position: center center;
@@ -51,6 +49,7 @@ input {
   cursor: pointer;
   margin-top: 10px;
   width: 50%;
+  border-radius: 5px;
 }
 
 button:hover {
@@ -184,6 +183,9 @@ button:hover {
 .winner,
 .loser {
   display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .footer {
   position: fixed;
@@ -211,16 +213,26 @@ button:hover {
 .play-again {
   display: none;
   text-align: center;
-  margin-top: 10px;
+  margin-top: 15px;
 }
 
 .play-again button {
   color: black;
   padding: 5px;
   cursor: pointer;
+  border-radius: 5px;
+  width: 8em;
 }
 
 .play-again p {
   margin-top: 5px;
   font-size: 8px;
+}
+
+video {
+  width: 400px;
+  pointer-events: none;
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 5px;
 }
